# Chat-App-MERN

./: .gitignore  README.md
backend/: .env  package-lock.json  package.json
backend/src/: index.js
backend/src/controllers/: auth.controller.js  friend.controller.js  message.controller.js
backend/src/lib/: cloudinary.js  db.js  passport.config.js  socket.js  utils.js
backend/src/middleware/: auth.middleware.js
backend/src/models/: message.model.js  user.model.js
backend/src/routes/: auth.route.js  friend.route.js  message.route.js
backend_py/: main.py  pyproject.toml  requirements.txt
backend_py/app/: main.py
backend_py/app/api/: deps.py
backend_py/app/api/routes/: __init__.py  auth.py  friends.py  messages.py
backend_py/app/core/: config.py  security.py
backend_py/app/db/: database.py
backend_py/app/schemas/: message.py  user.py
backend_py/app/sockets/: socket_app.py
backend_py/app/utils/: cloudinary.py  logger.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatContainer.jsx  ChatHeader.jsx  FriendsBox.jsx  MessageInput.jsx  Navbar.jsx  NoChatSelected.jsx  Sidebar.jsx
frontend/src/lib/: axios.js  utils.js
frontend/src/pages/: HomePage.jsx  LoginPage.jsx  ProfilePage.jsx  SettingsPage.jsx  SignUpPage.jsx
frontend/src/store/: useAuthStore.js  useChatStore.js  useThemeStore.js
